<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/calId"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/calculate" />
        <item
                android:id="@+id/expenseId"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/add" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/mapId"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/map"/>
            <item
                    android:id="@+id/contactId"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/contact" />
            <item
                    android:id="@+id/aboutId"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/about" />
            <item
                    android:id="@+id/exitId"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/exit" />
        </menu>
    </item>

</menu>
